# jsp

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/jsp/: cli.py  io.py  mock_data.py  output.py
src/jspprint/: cli.py  csv_io.py  io.py  json_io.py
tests/: test_cli.py  test_csv_cli.py  test_csv_io.py  test_io.py  test_json_io.py
