[project]
name = "jsp"
version = "0.1.0"
description = "A CLI tool for viewing and manipulating JSON files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
jsp = "jsp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jsp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
