[project]
name = "jspprint"
version = "0.1.0"
description = "A CLI tool for viewing and manipulating JSON files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = ["rich>=14.3.3", "typer>=0.24.1"]

[project.scripts]
jspprint = "jspprint.cli:app"

[project.urls]
Homepage = "https://github.com/jyjokokk/jspprint"
Repository = "https://github.com/jyjokokk/jspprint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jspprint"]

[tool.hatch.build.targets.sdist]
include = ["src/jspprint/", "README.md", "LICENSE", "pyproject.toml"]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
